# examples

./: .gitignore
cpp_example/: CMakeLists.txt  Dockerfile  build_docker.sh  main.cpp  run_docker.sh
python_example/: Dockerfile
python_example/src/python_example_package/: main.py
python_example/tests/: test_main.py
